kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: three-tier-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: lavanyasharma07/kube-flask-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: web
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
