kubernetes-files/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport
  namespace: three-tier-app
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - name: web
      port: 8080
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: three-tier-app
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
